configs/internal/shinobi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shinobi
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: shinobi
      app.kubernetes.io/name: shinobi
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: shinobi
        app.kubernetes.io/name: shinobi
    spec:
      automountServiceAccountToken: true
      containers:
        - image: registry.gitlab.com/shinobi-systems/shinobi@sha256:f497fdc0811dc09c9765e754d9fe6a5fb1e18122d91c885b9efd93645cc84000 # dev tag, release date January 13, 2026
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          name: shinobi
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          volumeMounts:
            - name: shinobi-config 
              readOnly: true
              mountPath: "/home/Shinobi/conf.json"
              subPath: conf.json
            - name: shinobi-config
              readOnly: true
              mountPath: "/home/Shinobi/super.json"
              subPath: super.json
            - name: shinobi-media
              mountPath: /recordings
            - name: shinobi-mysql
              mountPath: /var/lib/mysql

      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        fsGroup: 0
        runAsGroup: 0
        runAsUser: 0
      serviceAccountName: default
      volumes:
        - name: shinobi-media
          nfs:
            path: /Media/surveillance
            server: 192.168.1.10
        # Testing
        - name: shinobi-mysql
          emptyDir:
            sizeLimit: 500Mi
        # - name: shinobi-mysql
        #   persistentVolumeClaim:
        #     claimName: shinobi-mysql
        - name: shinobi-config
          secret:  
            secretName: shinobi-secrets
            items:
              - key: conf.json
                path: conf.json
              - key: super.json
                path: super.json
