configs/internal/shinobi/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: shinobi
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: shinobi
    app.kubernetes.io/name: shinobi
  type: ClusterIP
